# alerts-producer

./: Cargo.toml  Dockerfile  build.rs
.github/workflows/: release.yml
proto/: MerchantFlowsGrpc.proto
src/: lib.rs  main.rs  settings.rs
src/app_ctx/: app_ctx.rs
src/grpc_client/: email_alerts.rs  merchant_flows_grpc.rs  mod.rs
src/sb/: mod.rs
src/sb/listeners/: mod.rs  order_execution_operation_listener.rs  swap_operations_listener.rs
